<resources>
    <string name="app_name">Self</string>
    <string name="grateful_text">What are you grateful for today ?</string>
    <string name="grateful_title">Self. Gratitude. Journal</string>
    <string name="get_started">Get started</string>
    <string name="email">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="or_text">Or</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="your_thoughts">Your thoughts</string>
    <string name="title">Title</string>
    <string name="post_date">Post date</string>
    <string name="menu_title">Add Thoughts</string>
</resources>