<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".activity.MainActivity"

    android:background="@drawable/gradient_bg"
    >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofia"
        android:text="@string/grateful_title"
        android:textSize="30sp" />

    <RelativeLayout
        android:id="@+id/lRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:elevation="6dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/tvGratefulText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/grateful_text"
                android:textSize="19sp" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/get_started"
        android:textColor="@color/colorYelowish" />

</LinearLayout>