<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"

    tools:context=".activity.PostJournalActivity"

    >

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="378dp"
        android:layout_height="250dp"
        android:src="@drawable/image_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/tvPostUsername"
        android:layout_width="121dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        android:text="Gina"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ivPostImage"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivPostImage" />

    <TextView
        android:id="@+id/tvPostDate"
        android:layout_width="121dp"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/post_date"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivPostImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPostUsername"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ivImagePostCameraButton"
        android:layout_width="138dp"
        android:layout_height="83dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="@+id/ivPostImage"
        app:layout_constraintEnd_toEndOf="@+id/ivPostImage"
        app:layout_constraintStart_toStartOf="@+id/ivPostImage"
        app:layout_constraintTop_toTopOf="@+id/ivPostImage" />

    <EditText
        android:id="@+id/etPostTitle"
        android:layout_width="372dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPostImage" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="372dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_outline"
        android:ems="10"
        android:hint="@string/your_thoughts"
        android:inputType="textMultiLine"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPostTitle" />

    <ProgressBar
        android:id="@+id/pbPostJournal"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescription"
        app:layout_constraintVertical_bias="0.383" />

    <Button
        android:id="@+id/btnPostSaveJournal"
        android:layout_width="378dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="Save"
        android:textColor="@color/colorYelowish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbPostJournal"
        app:layout_constraintVertical_bias="0.914" />
</androidx.constraintlayout.widget.ConstraintLayout>